result-server-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-server-app
  namespace: my-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result-server-app
  template:
    metadata:
      labels:
        app: result-server-app
    spec:
      containers:
      - name: result-server-app
        image: brunnerlan/result-server-app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
