mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: my-apps
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
