web-server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-app
  namespace: my-apps
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: web-server-app
