web-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: my-apps
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: meinwebserver.manuel.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server-app
            port:
              number: 80
